# flutter_rtsp_ffmpeg

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: native-lib.cpp
android/src/main/cpp/include/: config.h
android/src/main/kotlin/com/potterhsu/rtsplibrary/: RtspClient.java
android/src/main/kotlin/com/xcellapps/flutter/rtsp_ffmpeg/: FFMpegView.kt  FFMpegViewFactory.kt  RtspFfmpegPlugin.kt
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/xcellapps/flutter/rtsp_ffmpeg_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: rtsp_ffmpeg.podspec
ios/Classes/: RtspFfmpegPlugin.h  RtspFfmpegPlugin.m  SwiftRtspFfmpegPlugin.swift
lib/: rtsp_ffmpeg.dart
test/: rtsp_ffmpeg_test.dart
